Thu Aug 28 11:30:39 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * Makefile.am: removed acconfig.h from the EXTRA_DIST list

Thu Aug 28 11:25:07 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * configure.in: removed portability checks for error, stat and lstat that
     caused a compile errors on Solaris. Added the '-mimpure-text'
     extra ld flag for GCC on solaris systems (a linkage error occurs
     when libstdc++ is not shared)

Thu Aug 28 11:22:57 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * include/Makefile.am: changed htconfig.h.in into config.h.in

Thu Aug 28 11:16:19 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htlib/error.[h,c]: removed for now, until replacement functions will be
    correctly performed.

Thu Aug 28 11:11:32 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htdoc/cf_generate.pl: fixed an error when opening tail and head files
    * Makefile.am: enabled rebuild from a different directory (it is used
    my 'make dist')

Thu Aug 28 10:46:35 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htlib/malloc.c: modified according to autoconf specifications as far
    as replacement functions are regarded
    * htlib/[lstat, stat].c: removed for now

Thu Aug 28 10:40:58 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

    * htdoc/cf_generate.pl: accept an optional parameter (top source directory)
    * htcommon/defaults.cc: fixed some broken lines which prevented
     cf_generate.pl from correctly working
    * htdoc/Makefile.am: modified the automake file for passing the top
     source directory to cf_generate.pl
    * htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
     Regenerated using cf_generate.pl.

Tue Aug 26 12:25:40 EST 2003 Gabriele Bartolini <angusgb@users.sourceforge.net>

   * configure.in: removed AC_FUNC_MKTIME because it may not work properly